# sopel-search

./: NEWS  README.md  pyproject.toml
sopel_search/: config.py  plugin.py  util.py
