[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_search", "sopel_search.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-search"
version = "1.0.1"
description = "Search plugin for Sopel IRC bots"

authors = [
  { name="dgw", email="dgw@technobabbl.es" },
]

license = { text="EFL-2.0" }
dynamic = ["readme"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: Eiffel Forum License (EFL)",
  "License :: OSI Approved :: Eiffel Forum License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.8, <4"
dependencies = [
  "sopel>=8.0",
  "duckduckgo-search~=6.3",
]

[project.optional-dependencies]
gsuggest = ["xmltodict~=0.13.0", "requests"]
# Sopel itself requires `requests`, but it's best to be explicit

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-search"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-search/issues"

[project.entry-points."sopel.plugins"]
"search" = "sopel_search.plugin"
