[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_search", "sopel_search.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-search"
version = "1.1.0"
description = "Search plugin for Sopel IRC bots"

authors = [
  { name="dgw", email="dgw@technobabbl.es" },
]

license = "EFL-2.0"
license-files = ["COPYING"]
dynamic = ["readme"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.9, <4"  # Python 3.9+ only as of duckduckgo-search 7.3
dependencies = [
  "sopel>=8.0",
  "duckduckgo-search>=8.0",
]

[project.optional-dependencies]
gsuggest = ["xmltodict~=0.13.0", "requests"]
# Sopel itself requires `requests`, but it's best to be explicit

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-search"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-search/issues"

[project.entry-points."sopel.plugins"]
"search" = "sopel_search.plugin"
